--- a/src/index.css
+++ b/src/index.css
@@ -22,17 +22,16 @@ h2 {
   font-weight: normal;
 }
 
-hr {
-  border: 1.2px solid #c2c5e1;
-}
-
 a {
   text-decoration: none;
   color: inherit;
 }
-
+header {
+  border-bottom: 2px solid #c2c5e1;
+}
 footer {
   height: 3.3rem;
+  border-top: 2px solid #c2c5e1;
 }
 
 button {
@@ -49,6 +48,27 @@ button:hover {
   cursor: pointer;
   color: white;
   background-color: #4361ee;
+}
+
+.wrapper {
+  margin: 0 auto;
+  max-width: 1280px;
+  padding: 0 2rem;
+}
+
+.nav {
+  display: flex;
+  gap: 1rem;
+  font-size: 1.3rem;
+}
+
+.links {
+  transition: all 0.2s ease-in-out;
+}
+
+.links:hover {
+  cursor: pointer;
+  color: #4361ee;
 }
 
 .inputWrapper {
@@ -75,7 +95,7 @@ button:hover {
 }
 
 .container {
-  margin: 40px 0;
+  margin-top: 2rem;
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -87,22 +107,16 @@ button:hover {
 }
 
 .header {
-  height: 60px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0.6rem 2rem;
 }
 
 .logo {
   height: 2rem;
   width: auto;
   object-fit: contain;
-}
-
-.wrapper {
-  margin: 0 auto;
-  max-width: 1280px;
-  padding: 0 2rem;
 }
 
 .footerWrapper {
